# adit_small

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_qm9_quickstart.ipynb
scripts/: train_dit.py  train_vae.py
src/adit_small/: __init__.py  data.py  dit.py  metrics.py  utils.py  vae.py
